--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -13,11 +13,8 @@ jobs:
         image: mongo
         ports:
           - 27017:27017
-    container:
-      image: node:13
     steps:
       - name: Post a user
-        run: |
-          curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"hello"\, \"address\": \"swded"\}'
+        run: 'curl -X POST http://localhost:3001/api/user -H ''Content-Type: application/json'' -d ''{"username": "hello","address": "dwded"}'''
       - name: Get Users
         run: curl http://localhost:3001/api/users
