--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           name: build
           path: build
-      - uses: actions/download-artifact
+      - uses: actions/download-artifact@v2
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain smiling-position.surge.sh
