--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         env:
           CI: true
       - name: Upload Test Coverage
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage
@@ -40,11 +41,13 @@ jobs:
         if: github.event_name == 'push'
         run: npm run build
       - name: Upload Build Folder
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
           name: build
           path: build
       - uses: actions/download-artifact@v2
+        if: github.event_name == 'push'
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain smiling-position.surge.sh
