--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage
-          path: coverage
+          path: react-app/coverage
       - name: Build Projects
         if: github.event_name == 'push'
         run: npm run build
@@ -45,7 +45,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: build
-          path: build
+          path: react-app/build
       - uses: actions/download-artifact@v2
         if: github.event_name == 'push'
       - name: Deploy to Staging
