fix: test action

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,3 +11,5 @@ jobs:
           who-to-greet: "World"
       - run: |
           echo "Time: ${{ steps.hello.outputs.time }}"
+          echo $MULTILINE_FILE > file.txt
+          cat file.txt
