fix: test action

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,3 +14,4 @@ jobs:
           echo ${{ secrets.MULTILINE_FILE }} | base64 -d > file.txt
           cat file.txt
           md5sum file.txt
+          echo ${{ secrets.MULTILINE_VAR }}
