--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,4 +14,5 @@ jobs:
           echo ${{ secrets.MULTILINE_FILE }} | base64 -d > file.txt
           cat file.txt
           md5sum file.txt
-          echo ${{ secrets.MULTILINE_VAR }}
+          echo ${{ secrets.MULTILINE_VAR }} > new_file.txt
+          cat new_file.txt
