--- a/.github/workflows/inputs.yml
+++ b/.github/workflows/inputs.yml
@@ -1,20 +1,64 @@
-name: Test Action
+name: Create cluster
 on:
   workflow_dispatch:
     inputs:
-      company:
+      gcloud_project:
+        default: terraseer
+        description: 'Google Cloud Project (All cluster will be created inside)'
         type: string
         required: true
-      boolean:
-        type: boolean
-        description: True or False
-      choice:
+      cluster_company:
+        default: mipwise
+        description: 'Company name (Ex: mipwise)'
+        type: string
+        required: true
+      ingress_host:
+        default: gke-test.mipwise.com
+        description: 'Host (Ex: gke-test.mipwise.com)'
+        type: string
+        required: true
+      support_user_email:
+        default: me@aftermarketanalytics.com
+        description: 'Support user email'
+        type: string
+        required: true
+      support_user_password:
+        default: securepassword
+        description: 'Support user password'
+        type: string
+        required: true
+      support_user_first_name:
+        default: Support
+        description: 'Support user First Name'
+        type: string
+        required: true
+      support_user_last_name:
+        default: Team
+        description: 'Support user Last Name'
+        type: string
+        required: true
+      cluster_zone:
+        default: us-west1-a
+        description: 'GKE Cluster Zone'
+        type: string
+        required: true
+      cluster_ip_region:
+        default: us-west1
+        description: 'GKE Cluster Reserved IP Region'
+        type: string
+        required: true
+      haproxy_acme_emails:
+        default: filipepferraz@gmail.com
+        description: 'ACME Email'
+        type: string
+        required: true
+      haproxy_acme_endpoint:
         type: choice
-        description: Make a choice
+        description: 'ACME Endpoint'
+        required: true
         options:
-          - foo
-          - bar
-          - baz
+          - v2-staging
+          - v2
 jobs:
   testing-action:
     runs-on: ubuntu-latest
